wrote the README.md generated more swagger.yaml file
