# handlers/get.go
@@ -22,6 +22,13 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// swagger: route GET /products/{id} products listSingleProduct
+// Return a list of products from the database
+// responses:
+// 200: productResponse
+// 404: errorResponse
+
+// ListSingle handles GET requests
 func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 	id := getProductID(r)
 
